# littlethings

./: .gitignore  Loop.hs  README.md  aliens.hs  automaten.hs  colorAndLight.html  gauss.hs  muenchen.hs  race.hs  reNaiv.hs  reNaiv.js  rotateDouble.hs  types_that_should_notbe.hs  uebMsc.hs
automaten/: automaten.hs  re.hs  reAutomat.hs  reNaiv.hs
dumbparse/: pom.xml
euler/: .gitignore  1.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17_number_letter_counts.hs  18_maximum_path_sum.hs  19_counting_sundays.hs  2.hs  20_facotrial_digit_sum.hs  21_amicable_numbers.hs  22_names_scores.hs  23_non_abundant_sums.hs  24_lexic_permu.hs  25_1000_fib.hs  26_reciprocal_cycles.hs  27_quadratic_primes.hs  28_spiral_diagonals.hs  29_distinct_powers.hs  3.hs  30_digit_fifth_powers.hs  31_coin_sums.hs  32_pandigital_products.hs  33_digit_cancelling_fractions.hs  34_digit_factorials.hs  35_circularPrimes.hs  36_double_base_palindromes.hs  37_truncatable_primes.hs  38_pandigital_multiples.hs  39_integer_right_traingles.hs  4.hs  40_champernownes_constant.hs  41_pandigital_prime.hs  42_coded_triangle_numbers.hs  43_sub_string_divisibility.hs  44_pentagon_numbers.hi  (+41 more)
fquery/: .project  pom.xml
funcdb/: pom.xml
gf-gen/: mid.py  prompt.py  sample.env
grammar/: .project
hSimulation/: actions.py  constants.py  player.py  playerTest.py  players.py  sim.py  strategy.py
hackerrank/: .gitignore  .project  build.gradle
hibernateSerial/: .project  build.gradle
testpackage/: .gitignore  .project  testpackage.cabal
testpackage/src/: Main.hs  MyNewModule.hs  Patrica.hs
(+664 files in other folders)
